# Esercitazioni

./: .gitignore  CMakeLists.txt
Alberi/Primo/: alberi_1.c
Alberi/Quarto/: alberi_4.c
Alberi/Quinto/: a.out  alberi_5.c
Alberi/Secondo/: .gitignore  alberi_2.c
Alberi/Terzo/: alberi_3.c
File/Primo/: file_1.c
File/Secondo/: .gitignore  file_2.c
Liste/Decimo/: a.out  liste_10.c
Liste/Dodicesimo/: liste_12.c
Liste/Nono/: Make  a.out  liste.h  liste_9.c  main.c
Liste/Ottavo/: a.out  liste_8.c
Liste/Primo/: a.out  liste_1.c
Liste/Quarto/: a.out  liste_4.c
Liste/Quinto/: a.out  liste_5.c
Liste/Secondo/: a.out  lista.txt  liste_2.c
Liste/Sesto/: a.out  liste_6.c
Liste/Settimo/: a.out  liste_7.c
Liste/Terzo/: a.out  liste_3.c
Liste/Undicesimo/: a.out  liste_11.c
